Fixed HTML image alignment with CSS.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,13 +56,12 @@ p {
     font-size: 16px;
 }
 
+/* Moved background image to HTML. Modified CSS to represent original content. */
 .hero {
     height: 800px;
     width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    margin-bottom: 21px;
+    object-fit: cover;
 }
 
 .float-left {
